<resources>
    <string name="app_name">ElectronicsLab</string>
    <string name="authorCredentials">IU3-83B Sergey Shchesnyak sshchesnyak@gmail.com</string>
    <string name="editingProperties">Editing properties of\u0020</string>
    <string name="viewingProperties">Properties of\u0020</string>
    <string name="saveBtnText">Save</string>
    <string name="editBtnText">Edit</string>
    <string name="deviceName">Device name:</string>
    <string name="deviceHint">Device name</string>
    <string name="category">Category:</string>
    <string name="brand">Brand:</string>
    <string name="brandHint">Brand name</string>
    <string name="weight">Weight:</string>
    <string name="weightHint">Component weight (kg)</string>
    <string name="voltage">Working voltage:</string>
    <string name="voltageHint">The device\'s working voltage (V)</string>
    <string name="guarantee">Guarantee period:</string>
    <string name="guaranteeHint">Guarantee period</string>
    <string name="price">Price:</string>
    <string name="priceHint">Price (₽)</string>
    <string name="sampleName">Sample name</string>
    <string name="samplePrice">Sample price</string>
    <string name="sampleBrand">Sample brand</string>
    <string name="addDeviceBtnText">+</string>
    <string name="noCategory">No category selected</string>
    <string name="kg">\u0020kg</string>
    <string name="V">\u0020V</string>
    <string name="R">\u0020₽</string>
    <string name="alertTitle">Confirm deletion</string>
    <string name="alertBody">Are you sure you want to delete this device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="categorySelector">Select category</string>
    <string name="categoryOne">Cordless screwdrivers</string>
    <string name="categoryTwo">Cordless drills</string>
    <string name="categoryThree">Glue guns</string>
    <string name="guaranteeSelector">Select guarantee period:</string>
    <string name="NA">N/A</string>
    <string name="months">months</string>
    <string name="years">years</string>
</resources>