<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="14">

    <TextView
        android:id="@+id/parameterName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/deviceName"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textSize="14sp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/deviceHint"/>

    <TextView
        android:id="@+id/parameterCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/category"/>

    <Spinner
        android:id="@+id/editCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/parameterCompany"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/brand"/>

    <EditText
        android:id="@+id/editBrand"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textSize="14sp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/brandHint"/>

    <TextView
        android:id="@+id/parameterWeight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/weight"/>

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textSize="14sp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/weightHint"/>

    <TextView
        android:id="@+id/parameterVoltage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/voltage"/>

    <EditText
        android:id="@+id/editVoltage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textSize="14sp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/voltageHint"/>

    <TextView
        android:id="@+id/parameterGuarantee"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/guarantee"/>

    <include
        android:id="@+id/guarantee_container"
        layout="@layout/guarantee_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/parameterPrice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/price"/>

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:textSize="14sp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/priceHint"/>

</LinearLayout>